Fix header and hero section alignment issues

--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,10 @@ body {
 
 /* header */
 
-.header {    
+.header {   
+    outline: 1px red solid; 
     background-color: #1f2937;
-    padding: 16px 620px;
-    /* padding: 16px 100px; */
+    padding: 16px 570px 16px 620px;
     margin: 0;
     display: flex;
     justify-content: space-between;
@@ -20,7 +20,7 @@ body {
 }
 
 .logo {
-    /* outline: 1px red solid; */
+    outline: 1px red solid;
     font-size: 24px;
     color: #f9faf8;
     font-weight: bold;
@@ -30,7 +30,7 @@ body {
 }
 
 .header-links {
-    /* outline: 1px red solid; */
+    outline: 1px red solid;
     display: flex;
     gap: 24px;
 }
@@ -54,7 +54,7 @@ ul {
 /* hero section */
 
 .hero {
-    /* outline: 1px red solid; */
+    outline: 1px red solid;
     background-color: #1f2937;
     /* padding: 100px 500px; */
 
@@ -62,22 +62,19 @@ ul {
     margin: 0;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
-    
-    /* gap: 200px; */
+    gap: 100px;
     flex-wrap: wrap;
 }
 
 .hero-content {
-    /* outline: 1px red solid; */
+    outline: 1px red solid;
     width: 500px;
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
     align-items: flex-start;
     gap: 32px;
-    margin-bottom: 100px;
-    margin-right: 100px;
+    padding: 50px;
 
 }
 
@@ -107,7 +104,7 @@ ul {
 }
 
 .hero-image {
-    /* outline: 1px red solid; */
+    outline: 1px red solid;
     height: 400px;
 }
 
